[package]
name = "rollsum"
version = "0.2.1"
authors = ["Aidan Hobson Sayers <aidanhs@cantab.net>"]
repository = "https://github.com/aidanhs/rsroll"
documentation = "http://aidanhs.github.io/rsroll/"
readme = "README.md"
description = "Rolling checksum implementation"
license = "BSD-3-Clause"
edition = "2018"

[features]
default = ["gear", "bup"]
gear = []
bup = []

[dev-dependencies]
nanorand = "0.7"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
